Closed Bug 1018805 Opened 10 years ago Closed 10 years ago

text-transform: lowercase CSS directive is broken for Irish language text

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: kscanne, Assigned: jfkthame)

Details

Attachments

(3 files)

This is a companion to bug 1014639, which deals with uppercasing.  Irish has a couple of unusual rules for lowercasing.  For example, "An tAthair" should become "an t-athair" (with an inserted hyphen) when rendered in lowercase.

Here are the rules: convert every letter to lowercase as usual, except if a lowercase n or t appears at the beginning of a word, followed by an uppercase vowel (A,E,I,O,U,Á,É,Í,Ó,Ú).  In this case, insert a hyphen between the n/t and the vowel after lowercasing.  In the notation of bug 1014639:

t{V} -> t-{v}
n{V} -> n-{v}
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Attachment #8432283 - Flags: review?(smontagu)
Attachment #8432282 - Flags: review?(smontagu) → review+
Comment on attachment 8432283 [details] [diff] [review]
reftest for Irish lowercasing behavior.

Review of attachment 8432283 [details] [diff] [review]:
-----------------------------------------------------------------

rs=me
Attachment #8432283 - Flags: review?(smontagu) → review+
https://hg.mozilla.org/mozilla-central/rev/c4ca7aeb2eb4
https://hg.mozilla.org/mozilla-central/rev/b706a4689f73
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: