bug 1018805 - implement custom lowercasing behavior for Irish. r=smontagu